# frost_delek_challenge

./: Cargo.toml  ReadMe.md  group_keys.json  public_keys.json
src/: core.rs  frost_error.rs  lib.rs  main.rs
