[package]
name = "frost_delek_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]

# Core
frost-dalek = { git = "https://github.com/Darkeyes712/frost-dalek.git", branch = "custom-logic-keygen" }
curve25519-dalek = "3.2.0"


# Errors
anyhow = { version = "1.0", default-features = false }
thiserror = "1.0.64"

# CLI
clap = "4.5.20"

# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"

# Logging
tracing = { version = "0.1.40" }

# Authentication
hex = "0.4.3"
sha2 = "0.10.8"

# Utils
rand = "0.7"
smol_str = { version = "0.2", features = ["serde"] }